# tc_browser

./: README.md  tavolga-image-tavolga-20170109210848.rootfs.ext3.REMOVED.git-id  tavolga-image-tavolga-20170113133923.rootfs.ext3.REMOVED.git-id
20161216/: Performance_test.xlsx  status.txt
20161223/: StatusReview_Mera_week51.pptx.REMOVED.git-id
20161230/: final_report_draft.docx.REMOVED.git-id
20170109/: final_report_draft.docx.REMOVED.git-id
20170111/: baikal_tclient.dtb  booting.md  tavolga-r2.rootfs.tar.gz.REMOVED.git-id  uImage0801.gz.REMOVED.git-id
chrome_build_instruction/: chromium16k.patch  chromium_build_instructions.md
docker-chrome/: README.md  build.sh
docker-chrome/chr/: buildchrome.sh
docker-chrome/chr/configs/71-gcc8.2/: args.gn  blink_msa_missing_cast_workaround.patch  ffmpeg-build-script.patch  ffmpeg-generated-includes.patch  ffmpeg-pregen-config.patch  libpng_msa_intrinsics_on_any_mips.patch  patch-16k.patch  patch-compiler.patch  patch-google-util.patch  patch-icu.patch  patch-keyring.patch  patch-posix.patch  patch-v8.patch  patch-webrtc.patch  toolchain.patch  vars.sh
dromaeo/tests/: cssquery-dojo.html.REMOVED.git-id  cssquery-ext.html.REMOVED.git-id  cssquery-jquery-2.x.html.REMOVED.git-id  cssquery-jquery.html.REMOVED.git-id  cssquery-mootools.html.REMOVED.git-id  cssquery-prototype.html.REMOVED.git-id  cssquery-yui.html.REMOVED.git-id  dom-attr.html.REMOVED.git-id  dom-modify.html.REMOVED.git-id  dom-query.html.REMOVED.git-id  dom-traverse.html.REMOVED.git-id  jslib-attr-jquery-2.x.html.REMOVED.git-id  jslib-attr-jquery.html.REMOVED.git-id  jslib-attr-prototype.html.REMOVED.git-id  jslib-event-jquery-2.x.html.REMOVED.git-id  jslib-event-jquery.html.REMOVED.git-id  jslib-event-prototype.html.REMOVED.git-id  jslib-modify-jquery-2.x.html.REMOVED.git-id  jslib-modify-jquery.html.REMOVED.git-id  (+15 more)
firefox_build_instruction/: firefox_build_instructions.md
nondocker_notes/: firefox-52.9.0esr-1.patch  firefox_build_instructions.md
(+271 files in other folders)
